--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -9,3 +9,7 @@ services:
         DNS: ''
         NETBOX_URL: '' # http://localhost:8000
         NETBOX_RO_TOKEN : ''
+        TOPOLOGRAPH_WEB_API_USERNAME_EMAIL: 'ospf@topolograph.com'
+        TOPOLOGRAPH_WEB_API_PASSWORD: 'ospf'
+        TOPOLOGRAPH_WEB_API_AUTHORISED_NETWORKS: '127.0.0.1/32,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16'
+        SWAGGER_HOST: 'localhost:8088'
