Fix ospfwatcher_logstash #2. OSPF Watcher uses topolograph_backend as external network

--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ NETBOX_RO_TOKEN=''
 TOPOLOGRAPH_WEB_API_USERNAME_EMAIL='ospf@topolograph.com'
 TOPOLOGRAPH_WEB_API_PASSWORD=ospf
 TOPOLOGRAPH_WEB_API_AUTHORISED_NETWORKS='127.0.0.1/32,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16'
+MONGODB_DATABASE=admin
+MONGODB_USERNAME=admin
+MONGODB_PASSWORD=myadminpassword
+MONGODB_HOSTNAME=mongodb
