--- a/webserver/templates/app.conf.template
+++ b/webserver/templates/app.conf.template
@@ -1,4 +1,4 @@
-upstream app_server {
+upstream flask_app {
     server flask:5000;
 }
 server {
@@ -8,18 +8,21 @@ server {
     access_log /var/log/nginx/access.log;
     client_max_body_size 64M;
 
-    location / {
-        try_files $uri @proxy_to_app;
+    location /socket.io/ {
+        proxy_pass http://flask_app;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host:$server_port;
     }
 
-    location @proxy_to_app {
-        gzip_static on;
-
+    location / {
+        proxy_pass http://flask_app;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host:$server_port;
+        proxy_set_header X-Forwarded-Host $host:$server_port;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Host $http_host;
-        proxy_buffering off;
-        proxy_redirect off;
-        proxy_pass http://app_server;
     }
 }
