--- a/webserver/templates/app.conf.template
+++ b/webserver/templates/app.conf.template
@@ -2,7 +2,7 @@ upstream flask_app {
     server flask:5000;
 }
 server {
-    listen 0.0.0.0:${NGINX_PORT};
+    listen 0.0.0.0:${TOPOLOGRAPH_PORT};
     server_name _;
     error_log  /var/log/nginx/error.log warn;
     access_log /var/log/nginx/access.log;
